fixed noticebox alignment and added background

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,8 @@ html *
   color: #f2f2f2;
   padding: 10px;
   text-decoration:dotted;
-  font-size: 30px;
+  font-size: 25px;
+
 }
 
 .sidebar a:hover{
