--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -1,6 +1,9 @@
+
+
 .profilePage{
+
     position: absolute;
-    margin-left: 250px;
+    margin-left: 270px;
 }
 
 .note {
